syntax = "proto3";

package stocktrading;
option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "StockTradingProto";

message StockRequest {
  string stock_symbol = 1; // The stock symbol to query
}

message StockResponse {
  string stock_symbol = 1;
  double price = 2;
  string timestamp = 3;
}

message StockOrder {
  string order_id=1;
  string stock_symbol=2;
  int32 quantity=3;
  int32 price=4;
  string order_type=5; // BUY or SELL
}

message OrderSummary {
  int32 total_orders=1;
  int32 total_amount=2;
  int32 success_count=3;
}

message TradeStatus {
  string order_id = 1;
  string status = 2; // e.g., "EXECUTED", "PENDING", "CANCELLED"
  string message = 3; // Additional information about the trade status
}

service StockTradingService {
  // Unary - RPC -> Get Stock Price
  rpc getStockPrice(StockRequest) returns (StockResponse);

  // Server Streaming
  rpc subscribeStockPrice(StockRequest) returns (stream StockResponse);

  // Client Streaming
  rpc bulkStockOrder(stream StockOrder) returns (OrderSummary);

  // Bi Directional Streaming
  rpc liveTrading(stream StockOrder) returns (stream TradeStatus);
}